--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -1,9 +1,9 @@
 <div class="header-container">
   <div class="logo-container">
-    <a (click)="toogleSidebar()" href="#" class="sidebar-toggle">
+    <a (click)="toggleSidebar()" href="#" class="sidebar-toggle">
       <nb-icon icon="menu-2-outline"></nb-icon>
     </a>
-    <a class="logo" href="#" (click)="navigateHome()">ngx-<span>admub</span></a>
+    <a class="logo" href="#" (click)="navigateHome()">Enigma</a>
   </div>
   <nb-select
     [selected]="currentTheme"
