--- a/src/app/@theme/layouts/one-column/one-column.layout.html
+++ b/src/app/@theme/layouts/one-column/one-column.layout.html
@@ -3,7 +3,12 @@
     <ngx-header></ngx-header>
   </nb-layout-header>
 
-  <nb-sidebar class="menu-sidebar" tag="menu-sidebar" responsive>
+  <nb-sidebar
+    class="menu-sidebar"
+    tag="menu-sidebar"
+    state="compacted"
+    responsive
+  >
     <ng-content select="nb-menu"></ng-content>
   </nb-sidebar>
 
