--- a/src/app/@theme/components/footer/footer.component.html
+++ b/src/app/@theme/components/footer/footer.component.html
@@ -3,5 +3,9 @@
   <b><a href="https://samuelhoera.dev" target="_blank">Samuel Höra</a></b> 2021
 </span>
 <div class="socials">
-  <a href="#" target="_blank" class="ion ion-social-github"></a>
+  <a
+    href="https://github.com/hoersamu/Enigma-website"
+    target="_blank"
+    class="ion ion-social-github"
+  ></a>
 </div>
