--- a/src/app/pages/event-organisation/create-event/create-event.component.html
+++ b/src/app/pages/event-organisation/create-event/create-event.component.html
@@ -1,24 +1,43 @@
 <div class="steppers-container row">
   <div class="col-12">
     <nb-card>
-      <nb-card-body>
+      <nb-card-body
+        [nbSpinner]="sending"
+        nbSpinnerStatus="primary"
+        nbSpinnerSize="giant"
+        nbSpinnerMessage=""
+      >
         <nb-stepper #stepper>
           <nb-step label="Übersicht">
-            <overview-form (next)="next()"></overview-form>
+            <overview-form (next)="next($event)"></overview-form>
           </nb-step>
           <nb-step label="Info">
-            <info-form (next)="next()" (previous)="previous()"></info-form>
+            <info-form
+              (next)="next($event)"
+              (previous)="previous()"
+            ></info-form>
           </nb-step>
           <nb-step label="Spiel">
-            <spiel-form (next)="next()" (previous)="previous()"></spiel-form>
+            <spiel-form
+              (next)="next($event)"
+              (previous)="previous()"
+            ></spiel-form>
           </nb-step>
           <nb-step label="Discord">
-            <info-form (next)="next()" (previous)="previous()"></info-form>
+            <discord-form
+              (next)="submit($event)"
+              (previous)="previous()"
+            ></discord-form>
           </nb-step>
           <nb-step [hidden]="true" label="">
             <div class="step-container">
-              <h3>Wizard completed!</h3>
-              <button nbButton (click)="stepper.reset()">Try again</button>
+              <h3>Event creation complete!</h3>
+              <button nbButton class="navButton" (click)="stepper.reset()">
+                Try again
+              </button>
+              <button nbButton class="navButton" (click)="viewEvent()">
+                View Event
+              </button>
             </div>
           </nb-step>
         </nb-stepper>
