--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -19,10 +19,9 @@
 <div class="header-container">
   <nb-actions size="small">
     <nb-action class="control-item" icon="bell-outline"></nb-action>
-    <nb-action class="user-action" *nbIsGranted="['view', 'user']">
+    <nb-action class="user-action">
       <nb-user
         [nbContextMenu]="userMenu"
-        [nbContextMenu.tag]="ts"
         [onlyPicture]="userPictureOnly"
         [name]="user?.username"
         [picture]="user?.avatar"
