added devider below date

--- a/src/app/pages/events/event-overview/event-overview.component.scss
+++ b/src/app/pages/events/event-overview/event-overview.component.scss
@@ -1,3 +1,5 @@
+@import "../../../@theme/styles/themes.scss";
+
 .right-align {
   text-align: end;
 }
@@ -8,4 +10,10 @@
 
 .small-text {
   font-size: small;
+}
+
+@include nb-install-component {
+  .date-card {
+    border-bottom: solid 0.0625rem nb-theme(border-basic-color-4);
+  }
 }
