--- a/src/app/pages/events/event-overview/event-overview.component.html
+++ b/src/app/pages/events/event-overview/event-overview.component.html
@@ -5,7 +5,7 @@
   <div class="col-md-8">
     <nb-card>
       <nb-card-header> {{ event?.name }}</nb-card-header>
-      <nb-card-body
+      <nb-card-body class="date-card"
         ><div class="row">
           <div class="col-6 small-text">Datum:</div>
           <div class="col-6 right-align small-text">
