--- a/src/app/pages/roster/roster-component/roster-component.scss
+++ b/src/app/pages/roster/roster-component/roster-component.scss
@@ -1,6 +1,6 @@
-.example-list {
-  width: 500px;
-  max-width: 100%;
+.soldier-list {
+  width: 200px;
+  //max-width: 100%;
   border: solid 1px #ccc;
   min-height: 60px;
   display: block;
@@ -9,7 +9,7 @@
   overflow: hidden;
 }
 
-.example-box {
+.soldier-box {
   padding-bottom: 20px 10px;
   border-bottom: solid 1px #ccc;
   color: rgba(0, 0, 0, 0.87);
