--- a/src/app/pages/roster/roster-component/roster-component.html
+++ b/src/app/pages/roster/roster-component/roster-component.html
@@ -1,5 +1,6 @@
 <nb-card
-  ><nb-card-body
+  ><nb-card-header>{{this.service.data.eventname}}</nb-card-header>
+  <nb-card-body
     [nbSpinner]="loading"
     nbSpinnerStatus="primary"
     nbSpinnerSize="giant"
