--- a/src/app/pages/roster/roster-overview/roster-overview.component.html
+++ b/src/app/pages/roster/roster-overview/roster-overview.component.html
@@ -1,13 +1,19 @@
-<div class="col-md-5 list">
+<div class="col-lg-6 col-md-12 list">
   <div class="row">
-    <div class="col-6 cell">Kommandant</div>
-    <div class="col-6 border-left cell">
+    <div class="col-5 cell">Kommandant</div>
+    <div class="col-5 border-left cell">
       {{ this.service.data.commander.username }}
+    </div>
+    <div class="col-2 border-left cell">
+      {{ this.service.data.enroled }}
     </div>
   </div>
 </div>
 
-<div class="col-md-6 list" *ngFor="let division of this.service.divisions">
+<div
+  class="col-lg-6 col-md-12 list"
+  *ngFor="let division of this.service.divisions"
+>
   <div
     class="row"
     [class.border-bottom]="this.unfolded[division.key]"
