--- a/src/app/pages/roster/roster-squad/roster-squad.component.scss
+++ b/src/app/pages/roster/roster-squad/roster-squad.component.scss
@@ -7,15 +7,8 @@
 }
 
 .squad-name {
-  width: 100%;
-}
-
-input {
-  font-size: 20px;
-}
-
-.trash {
-  width: 50px;
+  max-width: calc(100%-40px);
+  width: calc(100%-40px);
 }
 
 @include nb-install-component {
@@ -25,5 +18,6 @@ input {
     border: none !important;
     background: nb-theme(background-basic-color-1) !important;
     font-size: 20px !important;
+    min-width: 0%;
   }
 }
