translated not Found component

--- a/src/app/pages/miscellaneous/not-found/not-found.component.html
+++ b/src/app/pages/miscellaneous/not-found/not-found.component.html
@@ -5,7 +5,7 @@
         <div class="flex-centered col-xl-4 col-lg-6 col-md-8 col-sm-12">
           <h2 class="title">404 Page Not Found</h2>
           <small class="sub-title"
-            >The page you were looking for doesn't exist</small
+            >Die Seite, nach der du suchst existiert nicht</small
           >
           <button
             nbButton
@@ -14,7 +14,7 @@
             type="button"
             class="home-button"
           >
-            Take me home
+            Nach Hause
           </button>
         </div>
       </nb-card-body>
