--- a/src/app/pages/event-organisation/create-event/info-form/info-form.component.html
+++ b/src/app/pages/event-organisation/create-event/info-form/info-form.component.html
@@ -47,7 +47,7 @@
           }"
         /><nb-date-timepicker
           #vorbesprechungPicker
-          format="dd.MM yyyy hh:mm"
+          format="DD.MM yyyy hh:mm"
         ></nb-date-timepicker>
       </div>
     </div>
