--- a/src/app/pages/event-organisation/create-event/overview-form/overview-form.component.html
+++ b/src/app/pages/event-organisation/create-event/overview-form/overview-form.component.html
@@ -54,7 +54,7 @@
         />
         <nb-date-timepicker
           #datumPicker
-          format="dd.MM yyyy hh:mm"
+          format="DD.MM yyyy hh:mm"
         ></nb-date-timepicker>
       </div>
       <div class="form-group">
@@ -74,7 +74,7 @@
           }"
         /><nb-date-timepicker
           #anmeldungPicker
-          format="dd.MM yyyy hh:mm"
+          format="DD.MM yyyy hh:mm"
         ></nb-date-timepicker>
       </div>
       <div class="form-group">
