--- a/src/app/pages/miscellaneous/not-found/not-found.component.html
+++ b/src/app/pages/miscellaneous/not-found/not-found.component.html
@@ -9,12 +9,11 @@
           >
           <button
             nbButton
-            fullWidth
             (click)="goToHome()"
             type="button"
             class="home-button"
           >
-            Nach Hause
+            Zurück
           </button>
         </div>
       </nb-card-body>
