--- a/src/app/pages/miscellaneous/work-in-progress/work-in-progress.component.html
+++ b/src/app/pages/miscellaneous/work-in-progress/work-in-progress.component.html
@@ -10,12 +10,11 @@
           >
           <button
             nbButton
-            fullWidth
             (click)="goToHome()"
             type="button"
             class="home-button"
           >
-            Nach Hause
+            Zurück
           </button>
         </div>
       </nb-card-body>
