--- a/src/app/pages/roster/roster-division/roster-division.component.html
+++ b/src/app/pages/roster/roster-division/roster-division.component.html
@@ -40,7 +40,7 @@
       >
         {{ soldier.username }}
       </div>
-      <div
+      <!--<div
         class="soldier-box"
         *ngFor="let soldier of this.service.data[this.division]?.reserve"
         cdkDrag
@@ -48,7 +48,7 @@
         [cdkDragData]="soldier"
       >
         {{ soldier.username }}
-      </div>
+      </div>-->
     </div>
   </div>
 </div>
