--- a/src/app/pages/roster/roster-overview/roster-overview.component.html
+++ b/src/app/pages/roster/roster-overview/roster-overview.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-5 cell">Kommandant</div>
     <div class="col-5 border-left cell">
-      {{ this.service.data.commander.username }}
+      {{ this.service.data.commander?.username }}
     </div>
     <div class="col-2 border-left cell">
       {{ this.service.data.enroled }}
