--- a/src/app/pages/event-organisation/create-event/discord-form/discord-form.component.html
+++ b/src/app/pages/event-organisation/create-event/discord-form/discord-form.component.html
@@ -3,17 +3,22 @@
     <div class="col-sm-6">
       <div class="checkbox">
         <nb-checkbox (checkedChange)="toggleDiscord($event)"
-          >discord Nachricht erstellen?</nb-checkbox
+          >Discord Nachricht erstellen?</nb-checkbox
         >
       </div>
       <div class="checkbox">
-        <nb-checkbox (checkedChange)="isVerpflichtend = !isVerpflichtend"
+        <nb-checkbox (checkedChange)="isMandatory = !isMandatory"
           >Verpflichtend?</nb-checkbox
+        >
+      </div>
+      <div class="checkbox">
+        <nb-checkbox (checkedChange)="isSinglePool = !isSinglePool"
+          >Kombinierter Anmeldepool?</nb-checkbox
         >
       </div>
     </div>
     <div class="col-sm-6">
-      <div class="form-group" *ngIf="isSentToDiscord">
+      <div class="form-group">
         <label for="channel" class="label">Channel</label>
         <input
           id="channel"
@@ -34,6 +39,26 @@
             {{ option.name }}
           </nb-option>
         </nb-autocomplete>
+      </div>
+      <div class="form-group">
+        <label for="publishDate" class="label">Veröffentlichungsdatum</label>
+        <input
+          type="text"
+          nbInput
+          fullWidth
+          id="publishDate"
+          placeholder="Datum"
+          formControlName="publishDate"
+          [nbDatepicker]="publishDatePicker"
+          [ngClass]="{
+            'form-control-danger':
+              discordForm.invalid && (discordForm.dirty || discordForm.touched)
+          }"
+        />
+        <nb-date-timepicker
+          #publishDatePicker
+          format="DD.MM yyyy hh:mm"
+        ></nb-date-timepicker>
       </div>
     </div>
   </div>
