--- a/src/app/pages/miscellaneous/work-in-progress/work-in-progress.component.scss
+++ b/src/app/pages/miscellaneous/work-in-progress/work-in-progress.component.scss
@@ -13,5 +13,6 @@ nb-card-body {
   margin-bottom: 3rem;
 }
 .home-button {
-  margin-bottom: 2rem;
+  margin: 0 auto 2rem auto;
+  display: block;
 }
