feat: added stuff

--- a/src/app/pages/events/event-overview/event-overview.component.html
+++ b/src/app/pages/events/event-overview/event-overview.component.html
@@ -44,7 +44,7 @@
           </div>
           <div class="col-md-3 col-6">
             <div class="small-text">Karte:</div>
-            <div>{{ event?.map }}</div>
+            <div>{{ event?.hllMap }}</div>
           </div>
           <div class="col-md-3 col-6">
             <div class="small-text">Seite:</div>
